--- a/task_21/location/src/main/resources/application.properties
+++ b/task_21/location/src/main/resources/application.properties
@@ -2,9 +2,14 @@ spring.application.name=location
 
 server.port=8083
 
-spring.datasource.url=jdbc:h2:file:~/locationdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=foresight
-spring.datasource.password=password
+
+spring.datasource.url=jdbc:h2:file:./data/locationdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
